Updated localizable file

--- a/Localizable/en.lproj/Localizable.strings
+++ b/Localizable/en.lproj/Localizable.strings
@@ -10,3 +10,4 @@
 "klawiaturaON" = "Keyboard inactive";
 "klawiaturaOFF" = "Keyboard active";
 "autor" = "Check author website";
+"language" = "Change language";
