--- a/Localizable/pl.lproj/Localizable.strings
+++ b/Localizable/pl.lproj/Localizable.strings
@@ -11,4 +11,4 @@
 "klawiaturaON" = "Klawiatura wyłączona";
 "klawiaturaOFF" = "Klawiatura włączona";
 "autor" = "Sprawdź stronę autora";
-
+"language" = "Zmień język";
